--- a/demos/src/app/home/home.page.html
+++ b/demos/src/app/home/home.page.html
@@ -9,4 +9,6 @@
 <ion-content padding>
   The world is your oyster.
   <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+  <ion-item href='qbedemo'>QBEDemo</ion-item>
+  <ion-item href='http-samples'>Http Samples</ion-item>
 </ion-content>
