--- a/demos/src/app/home/home.page.html
+++ b/demos/src/app/home/home.page.html
@@ -11,4 +11,6 @@
   <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
   <ion-item href='qbedemo'>QBEDemo</ion-item>
   <ion-item href='http-samples'>Http Samples</ion-item>
+  <ion-item href='forms'>Reactive Nested Forms Demo</ion-item>
+
 </ion-content>
