--- a/demos/src/app/home/home.page.html
+++ b/demos/src/app/home/home.page.html
@@ -1,16 +1,34 @@
+<!-- <div *ngIf="true" class="splash" style='.splash {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #ff7400;
+}'>
+<div class="spinner"><p>This is my splash</p></div>
+</div> -->
+
 <ion-header>
   <ion-toolbar>
     <ion-title>
       Ionic Blank
     </ion-title>
+    <ion-buttons slot="end">
+        <ion-menu-button autoHide="true"></ion-menu-button>
+      </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
   The world is your oyster.
   <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  <ion-item href='qbedemo'>QBEDemo</ion-item>
-  <ion-item href='http-samples'>Http Samples</ion-item>
-  <ion-item href='forms'>Reactive Nested Forms Demo</ion-item>
+  <ion-item routerLink='/qbedemo'>QBEDemo</ion-item>
+  <ion-item routerLink='/http-samples'>Http Samples</ion-item>
+  <ion-item routerLink='/forms'>Reactive Nested Forms Demo</ion-item>
+  <!-- href is loading a different page.
+  routerLink is updating the content without chaning the page -->
 
 </ion-content>
