--- a/demos/src/app/view-assets/view-assets.page.html
+++ b/demos/src/app/view-assets/view-assets.page.html
@@ -1,4 +1,3 @@
-
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
@@ -9,195 +8,194 @@
 </ion-header>
 
 <ion-content padding>
-    
-
-    <form novalidate [formGroup]="formGroup" (ngSubmit)="onSubmit(formGroup)" *ngIf='!showResults'>
-        <div id="custom-overlay" [style.display]="showSearchingOverlay ? 'flex': 'none'">
-            <div class="flb">
-              <div class="lds-ellipsis">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-              </div>
-            </div>
-          </div>  
-      <!-- <ion-item > 
-            <ion-label>Asset Type</ion-label>
-            <ion-select placeholder="Select One" >
-              <ion-select-option *ngFor='let assetType of uniqueAssetType' value="{{assetType}}">{{assetType}}</ion-select-option>
-            </ion-select>
-          </ion-item> -->
-          <ion-input clearInput type="text" formControlName="owner" placeholder="Owner"></ion-input>
-        <ion-input clearInput type="text" formControlName="detailedVehicleType" placeholder="Detailed Vehicle Type"></ion-input>
-        <ion-input clearInput type="text" formControlName="serialNo" placeholder="Serial No."></ion-input>
-        <ion-input clearInput type="text" formControlName="assetType" placeholder="Asset Type"></ion-input>
-        <ion-input clearInput type="text" formControlName="yearOfManufacture" placeholder="Year of Manufacture"></ion-input>
-        <ion-button fill='clear'>Range</ion-button>
-<!--         <ion-item lines='none'>
-          <ion-input clearInput type="text" formControlName="yearOfManufacture" placeholder="Year of Manufacture"></ion-input>
-          <ion-button fill='clear'>Range</ion-button>
-        </ion-item> -->
-        
-        <ion-input clearInput type="text" formControlName="datePutIntoUse" placeholder="Date put into Use"></ion-input>
-        <ion-input clearInput type="text" formControlName="vendorCode" placeholder="Vehicle Manufactire's Code/Vendor Code"></ion-input>
-        
-    </form>
 
 
-    <ngx-datatable *ngIf='showResults'
-    class='material'
-    [rows]="searchedItems"
-    [columns]="columns"
-    [scrollbarH]="true"
-    [headerHeight]="50"
-    [footerHeight]="50"
-    [rowHeight]="'auto'"
-    [limit]="10"
-    >
-  
+  <form novalidate [formGroup]="formGroup"  *ngIf='!showResults'>
+    <div id="custom-overlay" [style.display]="showSearchingOverlay ? 'flex': 'none'">
+      <div class="flb">
+        <div class="lds-ellipsis">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
+    </div>
+    <!-- <ion-item > 
+<ion-label>Asset Type</ion-label>
+<ion-select placeholder="Select One" >
+<ion-select-option *ngFor='let assetType of uniqueAssetType' value="{{assetType}}">{{assetType}}</ion-select-option>
+</ion-select>
+</ion-item> -->
+    <ion-input clearInput type="text" formControlName="rardOwner" placeholder="Owner"></ion-input>
+    <ion-input clearInput type="text" formControlName="rardDetailedVehicleType" placeholder="Detailed Vehicle Type">
+    </ion-input>
+    <ion-input clearInput type="text" formControlName="rardSerialNo" placeholder="Serial No."></ion-input>
+    <ion-input clearInput type="text" formControlName="rardAssetType" placeholder="Asset Type"></ion-input>
+    <ion-input clearInput type="text" formControlName="rardYearOfManufacture" placeholder="Year of Manufacture">
+    </ion-input>
+    <ion-button fill='clear'>Range</ion-button>
+    <!--<ion-item lines='none'>
+<ion-input clearInput type="text" formControlName="yearOfManufacture" placeholder="Year of Manufacture"></ion-input>
+<ion-button fill='clear'>Range</ion-button>
+</ion-item> -->
+
+    <ion-input clearInput type="text" formControlName="rardDateUse" placeholder="Date put into Use"></ion-input>
+    <ion-input clearInput type="text" formControlName="rardVehicleManufacturerCode"
+      placeholder="Vehicle Manufactire's Code/Vendor Code"></ion-input>
+
+  </form>
+
+
+  <ngx-datatable *ngIf='showResults' class='material' [rows]="searchedItems" [columns]="columns" [scrollbarH]="true"
+    [headerHeight]="50" [footerHeight]="50" [rowHeight]="'auto'" [limit]="10">
+
 
   </ngx-datatable>
 
 
   <!-- <ion-input clearInput expand='full' placeholder='Filter - Owner || Vehicle No.' [(ngModel)]='filterString' (ngModelChange)='startFilter()' ><ion-icon name="funnel"></ion-icon></ion-input> -->
   <!--     <ion-list>
-        <span>
-          <ion-item>Asset Type</ion-item>
-          <ion-item>Year of Manufacture</ion-item>
-          <ion-item>Owner</ion-item>
-          <ion-item>Detailed Vehicle Type</ion-item>
-          <ion-item>Serial No.</ion-item>
-          <ion-item>Date put into Use</ion-item>
-          <ion-item>Vehicle Manu's Code/Vendor Code</ion-item>
-        </span>
-      </ion-list> -->
+<span>
+<ion-item>Asset Type</ion-item>
+<ion-item>Year of Manufacture</ion-item>
+<ion-item>Owner</ion-item>
+<ion-item>Detailed Vehicle Type</ion-item>
+<ion-item>Serial No.</ion-item>
+<ion-item>Date put into Use</ion-item>
+<ion-item>Vehicle Manu's Code/Vendor Code</ion-item>
+</span>
+</ion-list> -->
 
   <!--   <ion-list *ngFor='let item of items'>
-    <span>
-      <ion-item>{{item.assetType}}</ion-item>
-    </span>
-  </ion-list> -->
+<span>
+<ion-item>{{item.assetType}}</ion-item>
+</span>
+</ion-list> -->
 
   <!--   <table>
-    <th>
-      <ion-row>
-        <ion-col>Asset Type</ion-col>
-        <ion-col>Year of Manufacture</ion-col>
-        <ion-col>Owner</ion-col>
-        <ion-col>Detailed Vehicle Type</ion-col>
-        <ion-col>Serial No.</ion-col>
-        <ion-col>Date put into Use</ion-col>
-        <ion-col>Vehicle Manufactire's Code/Vendor Code</ion-col>
-      </ion-row>
-    </th>
-  </table> -->
-<!--   <table>
-    <ion-list>
-      <ion-item>
-        <th>
-          <ion-row>
-            <ion-col>
-        <td>Asset Type</td>
-        </ion-col>
-        <ion-col>
-          <td>Year of Manufacture</td>
-        </ion-col>
-        <ion-col>
-          <td>Owner</td>
-        </ion-col>
-        <ion-col>
-          <td>Detailed Vehicle Type</td>
-        </ion-col>
-        <ion-col>
-          <td>Serial No.</td>
-        </ion-col>
-        <ion-col>
-          <td>Date put into Use</td>
-        </ion-col>
-        <ion-col>
-          <td>Vehicle Manufactire's Code/Vendor Code</td>
-        </ion-col>
-        </ion-row>
-        </th>
-      </ion-item>
-    </ion-list>
-    <ion-list *ngFor='let item of itemsAPI'>
-      <ion-item>
-        <ion-row>
-          <tr>
-            <ion-col>
-              <td>{{item.rardAssetType}}</td>
-            </ion-col>
-            <ion-col>
-              <td>{{item.rardYearOfManufacture}}</td>
-            </ion-col>
-            <ion-col>
-              <td>{{item.rardOwner}}</td>
-            </ion-col>
-            <ion-col>
-              <td>{{item.rardDetailedVehicleType}}</td>
-            </ion-col>
-            <ion-col>
-              <td>{{item.rardSerialNo}}</td>
-            </ion-col>
-            <ion-col>
-              <td>{{item.rardDateUse}}</td>
-            </ion-col>
-            <ion-col>
-              <td>{{item.rardVehicleManufacturerCode}}</td>
-            </ion-col>
-          </tr>
-        </ion-row>
-      </ion-item>
-    </ion-list>
-  </table> -->
+<th>
+<ion-row>
+<ion-col>Asset Type</ion-col>
+<ion-col>Year of Manufacture</ion-col>
+<ion-col>Owner</ion-col>
+<ion-col>Detailed Vehicle Type</ion-col>
+<ion-col>Serial No.</ion-col>
+<ion-col>Date put into Use</ion-col>
+<ion-col>Vehicle Manufactire's Code/Vendor Code</ion-col>
+</ion-row>
+</th>
+</table> -->
+  <!--   <table>
+<ion-list>
+<ion-item>
+<th>
+<ion-row>
+<ion-col>
+<td>Asset Type</td>
+</ion-col>
+<ion-col>
+<td>Year of Manufacture</td>
+</ion-col>
+<ion-col>
+<td>Owner</td>
+</ion-col>
+<ion-col>
+<td>Detailed Vehicle Type</td>
+</ion-col>
+<ion-col>
+<td>Serial No.</td>
+</ion-col>
+<ion-col>
+<td>Date put into Use</td>
+</ion-col>
+<ion-col>
+<td>Vehicle Manufactire's Code/Vendor Code</td>
+</ion-col>
+</ion-row>
+</th>
+</ion-item>
+</ion-list>
+<ion-list *ngFor='let item of itemsAPI'>
+<ion-item>
+<ion-row>
+<tr>
+<ion-col>
+<td>{{item.rardAssetType}}</td>
+</ion-col>
+<ion-col>
+<td>{{item.rardYearOfManufacture}}</td>
+</ion-col>
+<ion-col>
+<td>{{item.rardOwner}}</td>
+</ion-col>
+<ion-col>
+<td>{{item.rardDetailedVehicleType}}</td>
+</ion-col>
+<ion-col>
+<td>{{item.rardSerialNo}}</td>
+</ion-col>
+<ion-col>
+<td>{{item.rardDateUse}}</td>
+</ion-col>
+<ion-col>
+<td>{{item.rardVehicleManufacturerCode}}</td>
+</ion-col>
+</tr>
+</ion-row>
+</ion-item>
+</ion-list>
+</table> -->
 
 
-<!-- 
+  <!-- 
 <span    *ngIf='filterEnabled'>
-   <ngx-datatable
+<ngx-datatable
 
-        [rows]="filteredItemsAPI"
-        [columns]="columns"
-        [scrollbarH]="true"
-        [scrollbarV]="true"
-        [rowHeight]="50"
-        [rowHeight]="'auto'"
+[rows]="filteredItemsAPI"
+[columns]="columns"
+[scrollbarH]="true"
+[scrollbarV]="true"
+[rowHeight]="50"
+[rowHeight]="'auto'"
 
-        >
-      </ngx-datatable>
-    </span> -->
+>
+</ngx-datatable>
+</span> -->
 
-<!--       <ngx-datatable
+  <!--       <ngx-datatable
 
-           [rows]="filteredItemsAPI"
-           [columns]="columns"
-           [scrollbarH]="true"
-           [scrollbarV]="true"
-           [rowHeight]="50"
-           [rowHeight]="'auto'"
-   
-           >
+[rows]="filteredItemsAPI"
+[columns]="columns"
+[scrollbarH]="true"
+[scrollbarV]="true"
+[rowHeight]="50"
+[rowHeight]="'auto'"
 
-        </ngx-datatable> -->
-        <span (click)='hideAtLeastOneMsg()'>
-          <ion-item lines='none' *ngIf='formGroup.touched && !formGroup.valid && !userHasCancelled '>
-            <ion-label color="danger">
-              Input for at least one field is required
-            </ion-label>
-            <ion-icon name='close'></ion-icon>
-          </ion-item>
-        </span>
+>
+
+</ngx-datatable> -->
+  <span (click)='hideAtLeastOneMsg()'>
+    <ion-item lines='none' *ngIf='formGroup.touched && !formGroup.valid && !userHasCancelled '>
+      <ion-label color="danger">
+        Input for at least one field is required
+      </ion-label>
+      <ion-icon name='close'></ion-icon>
+    </ion-item>
+  </span>
 
 
-        
+
 
 </ion-content>
 
 <ion-footer no-border text-center>
-    <ion-toolbar>
-        <ion-button  (click)='makeExcel()' [disabled]='searchedItems.length<1'><ion-icon name="arrow-round-down" ></ion-icon> </ion-button>
-        <ion-button  type="submit" (click)='onSubmit(formGroup)' [disabled]='!formGroup.valid'><ion-icon name="search"></ion-icon></ion-button>
-    </ion-toolbar>
-  </ion-footer>
+  <ion-toolbar>
+    <ion-button (click)='makeExcel()' [disabled]='searchedItems.length<1'>
+      <ion-icon name="arrow-round-down"></ion-icon>
+    </ion-button>
+    <ion-button type="submit" (click)='onSubmit(formGroup)' [disabled]='!formGroup.valid'>
+      <ion-icon name="search"></ion-icon>
+    </ion-button>
+  </ion-toolbar>
+</ion-footer>
