--- a/demos/src/app/view-assets/view-assets.page.scss
+++ b/demos/src/app/view-assets/view-assets.page.scss
@@ -1,3 +1,11 @@
+@import '../../../node_modules/@swimlane/ngx-datatable/release/index.css';
+@import '../../../node_modules/@swimlane/ngx-datatable/release/themes/material.css';
+@import '../../../node_modules/@swimlane/ngx-datatable/release/assets/icons.css';
+
+// @import '../../../node_modules/@swimlane/ngx-datatable/release/index.css'
+
+
+
 .lds-ellipsis {
     display: inline-block;
     position: relative;
