Demos Nested Forms and Validation Working. Asset Page Range Validtor Working

--- a/demos/src/app/forms/forms.page.html
+++ b/demos/src/app/forms/forms.page.html
@@ -13,8 +13,18 @@
   <form novalidate [formGroup]="formGroup" (ngSubmit)="onSubmit(formGroup)">
     <span *ngIf="formGroup.get('name').hasError('required') && formGroup.get('name').touched">Name is Required</span>
     <ion-input type="text" placeholder="Your full name" formControlName="name" (keydown)="nameKeydown()"></ion-input>
-    <ion-input type="email" placeholder="Your email address" formControlName="email"></ion-input>
-    <ion-input type="email" placeholder="Confirm your email address" formControlName="confirm"></ion-input>
+    
+    <div formArrayName='emailArray'>
+      <div [formGroupName]='i' *ngFor='let a of formGroup.controls.emailArray.controls;let i=index' >
+        <ion-item no-padding>
+          <ion-input type="text" formControlName="email" placeholder='Email'></ion-input>
+          <ion-icon name="add" (click)='addEmail()'></ion-icon>
+          <ion-icon *ngIf='formGroup.controls.emailArray.length>1' name="trash" (click)='removeEmail(i)'></ion-icon>
+        </ion-item>
+      </div>
+    </div>
+
+
     <!-- 
     <div formArrayName="cities">
       <div [formGroupName]='i'>
