Atleast One Email Validation in Nested Form. Hero Token

--- a/demos/src/app/home/home.page.html
+++ b/demos/src/app/home/home.page.html
@@ -28,6 +28,7 @@
   <ion-item routerLink='/qbedemo'>QBEDemo</ion-item>
   <ion-item routerLink='/http-samples'>Http Samples</ion-item>
   <ion-item routerLink='/forms'>Reactive Nested Forms Demo</ion-item>
+  <ion-item routerLink='/hero-token-sample-login-page'>Hero Token Sample Login</ion-item>
   <!-- href is loading a different page.
   routerLink is updating the content without chaning the page -->
 
